@@ -12,6 +12,7 @@ function isAsset() {
 }
 
 function objectTag(assetArgs) {
-  return '<span class="nm_Hatching_green" style="position: absolute; left: 461px; top: 76px; width: 256px; height: 256px;"></span>';
+	var uniqueId = dwscripts.getUniqueId("hatching");
+	return '<span class="nm_Hatching_green" id="' + uniqueId + '" style="position: absolute; left: 461px; top: 76px; width: 256px; height: 256px;"></span>';
 }
 
