@@ -1,0 +1,11 @@
+<!-- MENU-LOCATION=NONE -->
+<html xmlns:MMString="http://www.macromedia.com/schemes/data/string/">
+<head>
+<!-- Copyright 2000, 2001, 2002, 2003 Macromedia, Inc. All rights reserved. -->
+<title>NM_Highlight</title>
+
+<script src="NM_Highlight.js"></script>
+</head>
+<body>
+</body>
+</html>
